[tool.poetry]
name = "mesads"
version = "0.1.0"
description = ""
authors = ["Julien Castets"]

[tool.coverage.run]
omit = [
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/migrations/*.py",
    "*urls.py",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-registration = "^3.2"
pip = "^21.3.1"
install = "^1.3.5"
django-autocomplete-light = "^3.8.2"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
django-querysetsequence = "^0.15"
sentry-sdk = "^1.5.7"
boto3 = "^1.21.22"
django-storages = "^1.12.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.2"
flake8 = "^4.0.1"
coverage = {version = "^6.4.1", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
