[tool.poetry]
name = "mesads"
version = "0.1.0"
description = ""
authors = ["Julien Castets"]
[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"


[tool.coverage.run]
omit = [
    "manage.py",
    "mesads/settings.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/migrations/*.py",
    "*urls.py",
    "*/test_*.py",
    "*/unittest.py",
    # We should probably keep admin.py in coverage, but since it's only for
    # admins let's avoid over-engineering.
    "*/admin.py",
    "*/admin/*.py",
    # This file is mostly a copy of django classes, to allow authentication
    # with email. There's no value to add unittests here.
    "mesads/users/models.py",

    "mesads/app/crons.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "raise NotImplementedError",
    "pragma: nocover",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-registration = "^3.2"
django-autocomplete-light = "^3.8.2"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
django-querysetsequence = "^0.15"
sentry-sdk = "^1.5.7"
boto3 = "^1.21.22"
django-storages = "^1.12.3"
django-reversion = "^5.0.1"
djangorestframework = "^3.14.0"
django-cleanup = "^6.0.0"
dateparser = "^1.1.4"
pyshp = "^2.3.1"
django-cron = "^0.6.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.2"
coverage = {version = "^6.4.1", extras = ["toml"]}
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
